--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,15 @@ padding: 5px;
 
 }
 
+.col-heading {
+  background-image: url("https://s6.gifyu.com/images/IMG-20200510-WA0001.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  color:black;
+  margin: 10 px;
+  padding: 16px;
+}
+
 .jumbotron {
   margin: 10px ;
   padding: 50px;
