--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,16 @@ body {
   margin: 10px 0;
   }
 
+.profile-img{
+
+width: 150px;
+height: 150px;
+padding: 6px 6px 16px 6px;
+box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+margin-right: 50px;
+
+}
+
 .container {
 background-color: #fff;
 }
